# universal-live-share-server

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml
.github/workflows/scripts/: check_proto_impl_versions.sh
src/: logger.rs  main.rs  rpc.rs  server.rs
src/rpc/: helloworld.rs  live_share.rs  logger.rs  rpc_impl.rs  server.rs  traits.rs
src/rpc/live_share/: live_share_impl.rs  methods.rs
src/rpc/live_share/methods/: ping.rs  version.rs
src/server/: services.rs
src/server/interceptors/: logger.rs
src/server/services/: live_share.rs
src/server/services/live_share/: live_share_impl.rs  methods.rs
src/server/services/live_share/methods/: initialize.rs  ping.rs  version.rs
